--- a/vaccinekrugger/src/main/resources/application.properties
+++ b/vaccinekrugger/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/bdkrugger
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
