--- a/vaccinekrugger/src/main/resources/application.properties
+++ b/vaccinekrugger/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.jpa.database=postgresql
 #Para que no se muestre las modificaciones JPQL por consola
 #To doesn't show the modications on JPQL for console
 spring.jpa.show-sql=false
-#Para definir como trabajar el esquema BD NONE=para produccion y no se replieque los datos, CREATE
 #To define how work the schema DB
 spring.jpa.hibernate.ddl-auto=update
 security.basic.enable= false
@@ -14,3 +13,8 @@ spring.datasource.url=jdbc:postgresql://localhost/bdkrugger
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+#Key secret
+jwt.secret=secret
+#Time expiration 
+jwt.expiration=3600
+
